--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,17 @@ spring:
       period: 0
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:anubisinds-web;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:/data/anubis-industries-web
     username: sa
     password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate.ddl-auto: update # for production use validate
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 logging:
   level:
