--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       period: 0
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:/data/anubis-industries-web
+    url: jdbc:h2:file:./data/anubis-industries-web
     username: sa
     password:
   jpa:
